feat: Add validation logic;

--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/src/scss/_variables.scss
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/src/scss/_variables.scss
@@ -8,6 +8,7 @@ $border-radius: 10px;
 $small-screen-query: 576px;
 $big-screen-query: 1400px;
 $box-shadow: rgba(0, 0, 0, 0.17) 2px 2px 5px 2px;
+$headings-margin-bottom: 0;
 
 $accordion-bg: $secondary;
 $accordion-button-active-bg: $secondary;
