--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_CategoryModals.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_CategoryModals.cshtml
@@ -11,7 +11,7 @@
                 <div class="modal-body">
                     <form id="addCategory-form" method="post">
                         <input type="hidden" asp-for="FiscalPlanId" value="" id="addCategory_fiscalPlanId" />
-                        <input type="hidden" asp-for="CategoryType" value="" id="addCategory_type" name="type" />
+                        <input type="hidden" asp-for="CategoryType" value="" id="addCategory_type" name="Type" />
                         <div class="form-group">
                             <label asp-for="Name" class="control-label"></label>
                             <input asp-for="Name" class="form-control" autocomplete="off" />
