--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/src/scss/site.scss
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/src/scss/site.scss
@@ -2,17 +2,29 @@
 
 body {
     height: 100vh;
-    color: white;
+    color: $text-color;
     margin: 0;
     padding: 0;
     background-image: linear-gradient(45deg, #CCFBE5, #A2D6CB, #7EB1B1, #608C94, #456977);
     background-size: cover;
     background-position: center;
     overflow: hidden;
+
+    @-moz-document url-prefix() {
+        scrollbar-width: thin;
+    }
+    
 }
 
 h1, h2, h3, h4, h5, h6 {
     padding-bottom: 5px;
+}
+
+button {
+    padding: 0;
+    border: none;
+    background: transparent;
+    color: $text-color;
 }
 
 svg * {
@@ -46,7 +58,7 @@ svg * {
     padding: 4px;
     width: 100px;
     border: none;
-    color: white;
+    color: $text-color;
     background: linear-gradient(45deg, #7EB1B1, #608C94, #456977);
 }
 
@@ -55,11 +67,16 @@ svg * {
 }
 
 .iconRadioButton {
-    display: none;
+    width: 0;
+    height: 0;
 }
 
 .iconRadioButton:checked + label {
     border: 2px solid white;
+}
+
+.iconRadioButton:focus-visible + label {
+    border: 2px solid #A2D6CB;
 }
 
 ::-webkit-scrollbar {
@@ -76,7 +93,7 @@ svg * {
     border-radius: 5px;
 }
 
-.add-category-icon {
+.addCategory-icon {
     box-sizing: content-box;
     margin-left: auto;
     height: 23px;
@@ -113,6 +130,47 @@ svg * {
 .datepicker table tr td span.active.active {
     background-color: #608C94 !important;
     border-color: #456977 !important;
+}
+
+.accordion {
+    position: relative;
+    border-radius: $border-radius;
+    box-shadow: $box-shadow;
+    overflow: hidden;
+}
+
+.accordion-item {
+    border-radius: inherit;
+    border: none;
+}
+
+.accordion-head {
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.accordion-header {
+    padding: 5px 5px 5px 10px;
+    text-align: center;
+}
+
+.accordion-caret {
+    transform: none;
+    flex-shrink: 0;
+    width: var(--bs-accordion-btn-icon-width);
+    height: var(--bs-accordion-btn-icon-width);
+    margin: auto 7px auto 10px;
+    content: "";
+    background-image: var(--bs-accordion-btn-icon);
+    background-repeat: no-repeat;
+    background-size: var(--bs-accordion-btn-icon-width);
+    transition: var(--bs-accordion-btn-icon-transition);
+}
+
+.rotate {
+    transform: rotate(180deg);
 }
 
 //Spinners
@@ -159,6 +217,11 @@ svg * {
     color: $primary;
 }
 
+.navbar-brand:focus-visible {
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem rgba(2, 4, 3, 0.25);
+}
+
 .nav-link:hover, .navbar-brand:hover {
     color: lighten($primary, 20%);
 }
@@ -180,6 +243,86 @@ svg * {
     background: $secondary;
     border-radius: 5px;
 }
+
+// Message Box
+
+.messageBox {
+    visibility: hidden;
+    display: flex;
+    background-color: rgba(255,200,200, 0.2);
+    backdrop-filter: blur(15px);
+    height: 80px;    
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 1000;
+    border-radius: 40px;
+    max-width: 80px;
+    transform: translateX(-100%);
+    transition: transform 0.2s ease-out 0.8s, max-width 0.8s ease-out, visibility 1s;
+}
+
+.messageBox.show {
+    visibility: visible;
+    transform: none;
+    max-width: calc(100% - 20px);
+    transition: transform 0.2s ease-out, max-width 0.8s 0.2s ease-out;
+}
+
+.messageBoxIcon-container{
+    flex-shrink: 0;
+    width: 80px;
+    height: 80px;
+    background-color: rgba(256,256,256,0.2);
+    border-radius: 50%;
+    border: $secondary 5px solid;
+}
+
+.messageBox-collapse {
+    display: inline;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    overflow: hidden;
+    transition: max-width ease-out 5s 0.5s;
+}
+.messageBox-body {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    gap: 5px;
+    align-items: center;
+    padding: 5px 10px;
+}
+
+.messageBox-scrollcontainer::-webkit-scrollbar {
+    display: none;
+}
+
+.messageBox-scrollcontainer {
+    height: 100%;
+    max-width: calc(100% - 24px);
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.messageBoxMessage {
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 200px;
+}
+
+.messageBox-text {
+    white-space: nowrap;
+    overflow: hidden;
+}
+
 
 // Action sidebar
 
@@ -204,8 +347,7 @@ $sidebar-gap: 8px;
     align-items: center;
     justify-content: center;
     width: 50px;
-    height: 50px;
-    cursor: pointer;
+    height: 50px;    
 }
 
 #home-button {
@@ -328,7 +470,7 @@ main {
     backface-visibility: hidden;
     height: 100%;
     width: 100%;
-    transform: rotateY(calc(90deg * var(--s))) translateZ(calc(55vw));   
+    transform: rotateY(calc(90deg * var(--s))) translateZ(calc(55vw)); 
 }
 
 .visible-face {
@@ -347,11 +489,7 @@ main {
     mask: linear-gradient(180deg, transparent 0%, black 15px, black calc(100% - 15px), transparent 100%), linear-gradient(270deg, black 10px, transparent 10px);
     mask-position: center;
     mask-repeat: no-repeat;
-    mask-composite: add;
-
-    @-moz-document url-prefix() {
-        scrollbar-width: thin;
-    }
+    mask-composite: add;   
 }
 
 .content-container {
@@ -385,44 +523,8 @@ main {
     flex-direction: column;
 }
 
-.accordion {
+#incomeAccordion, #expenseAccordion {
     cursor: pointer;
-    position: relative;
-    border-radius: $border-radius;
-    box-shadow: $box-shadow;    
-}
-
-.accordion-item {
-    border-radius:inherit;
-    border: none;
-}
-
-.accordion-head {
-    display: flex;
-    align-items: center;
-    padding: 5px;
-}
-
-.accordion-header {
-    padding: 5px 5px 5px 10px;
-    text-align: center;
-}
-
-.accordion-caret {
-    transform: none;
-    flex-shrink: 0;
-    width: var(--bs-accordion-btn-icon-width);
-    height: var(--bs-accordion-btn-icon-width);
-    margin: auto 7px auto 10px;
-    content: "";
-    background-image: var(--bs-accordion-btn-icon);
-    background-repeat: no-repeat;
-    background-size: var(--bs-accordion-btn-icon-width);
-    transition: var(--bs-accordion-btn-icon-transition);
-}
-
-.rotate {
-    transform: rotate(180deg);
 }
 
 .border-container {
@@ -524,16 +626,10 @@ main {
     
 }
 
-.reeval-col {
-    padding: 3px 8px 8px 8px;
-    cursor: default;
-}
-
 .reevaluation-accordion {
-    scrollbar-width: none;
     max-height: 254px;
     overflow-y: hidden;
-    padding: 0;
+    padding: 0 5px 5px 0;
 }
 
 .reevaluation-accordion::-webkit-scrollbar {
@@ -551,20 +647,15 @@ main {
 }
 
 .reevalIcon {
-    width: 40px;
-    height: 40px;
-}
-
-.reevalIconNecessity {
-    width: 25px;
-    height: 25px;
+    width: 24px;
+    height: 24px;
 }
 
 .reevalIconLabel {
+    cursor: pointer;
     border-radius: 50%;
     width: 40px;
     height: 40px;
-    cursor: pointer;
 }
 
 .reevalIconContainer {
@@ -579,11 +670,17 @@ main {
     background-color: transparent;
     border: none;
     padding: 0;
+    fill: transparent;
 }
 
 .reeval-submit-svg {
     stroke: white;
-    fill: transparent;
+    fill: inherit;
+}
+
+.reeval-submit-button:focus, .reeval-submit-button:hover {
+    fill: #A2D6CB;
+    outline: none;
 }
 
 .reevalIconsContainer {
@@ -785,8 +882,8 @@ div.dt-processing > div:last-child > div {
 }
 
 .modalIcon {
-    width: 40px;
-    height: 40px;
+    width: 38px;
+    height: 38px;
 }
 
 .modalIconLabel {
