--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Category.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Category.cshtml
@@ -30,7 +30,7 @@
             <stop offset="100%" stop-color="#7EB1B1" />
         </radialGradient>
     </defs>    
-    <symbol id="add-transaction-icon" viewBox="0 0 14 14">
+    <symbol id="addTransaction-icon" viewBox="0 0 14 14">
         <path fill="url(#icon_gradient_radial)" fill-rule="evenodd" d="M8 1a1 1 0 0 0 -2 0v5H1a1 1 0 0 0 0 2h5v5a1 1 0 1 0 2 0V8h5a1 1 0 1 0 0 -2H8V1Z" clip-rule="evenodd" stroke-width="1"></path>
     </symbol>
     <symbol xmlns="http://www.w3.org/2000/svg" id="edit-icon" viewBox='0 0 16 16'>
@@ -41,12 +41,18 @@
         <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z" />
         <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z" />
     </symbol>
+    <symbol xmlns="http://www.w3.org/2000/svg" id="check-icon" viewBox="0 0 1024 1024">
+        <path d="M866.133333 258.133333L362.666667 761.6l-204.8-204.8L98.133333 618.666667 362.666667 881.066667l563.2-563.2z" fill="#3cb44b" stroke-width="60" stroke="#3cb44b" stroke-linecap="round" stroke-linejoin="round" />
+    </symbol>
+    <symbol xmlns="http://www.w3.org/2000/svg" id="cross-icon" viewBox="0 0 512 512">
+        <path fill="none" stroke="#e6194B" stroke-linecap="round" stroke-linejoin="round" stroke-width="65" d="M368 368L144 144M368 144L144 368" />
+    </symbol>
 </svg>
 
 <div id="action-sidebar">
     <a asp-controller="Home" asp-action="FiscalPlan" asp-route-id="@category.FiscalPlanId" >
         <div class="sidebar-button-container">
-            <svg class="sidebar-button" id="back-button" fill="#ffffff" xmlns="http://www.w3.org/2000/svg" width="800px" height="800px" viewBox="0 0 299.021 299.021">
+            <svg class="sidebar-button" id="back-button" fill="#ffffff" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 299.021 299.021">
                 <path d="M292.866,254.432c-2.288,0-4.443-1.285-5.5-3.399c-0.354-0.684-28.541-52.949-146.169-54.727v51.977 c0,2.342-1.333,4.48-3.432,5.513c-2.096,1.033-4.594,0.793-6.461-0.63L2.417,154.392C0.898,153.227,0,151.425,0,149.516 c0-1.919,0.898-3.72,2.417-4.888l128.893-98.77c1.87-1.426,4.365-1.667,6.461-0.639c2.099,1.026,3.432,3.173,3.432,5.509v54.776 c3.111-0.198,7.164-0.37,11.947-0.37c43.861,0,145.871,13.952,145.871,143.136c0,2.858-1.964,5.344-4.75,5.993 C293.802,254.384,293.34,254.432,292.866,254.432z" />
             </svg>
         </div>   
@@ -108,8 +114,8 @@
                                     <h5 class="accordion-header me-auto" id="accordionTransactionHeader">
                                         Transactions
                                     </h5>
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="add-category-icon" id="addTransaction-button" viewBox="0 0 14 14" height="23" width="23">
-                                        <use href="#add-transaction-icon" xlink:href="#add-transaction-icon" />
+                                    <svg xmlns="http://www.w3.org/2000/svg" id="addTransaction-button" height="23" width="23">
+                                        <use href="#addTransaction-icon" />
                                     </svg>
                                     <div class="accordion-caret rotate"></div>
                                 </div>
