--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_Layout.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_Layout.cshtml
@@ -43,11 +43,20 @@
             </svg>
         </div>
         <div class="messageBox-collapse">
+            <button type="button" class="messageBox-button" id="messageBoxUp-button" disabled>
+                <svg xmlns="http://www.w3.org/2000/svg" class="messageBox-caret" width="30" height="16" fill="currentColor" viewBox="0 0 16 16" preserveAspectRatio="none">
+                    <path d="M2 11h12L8 4z" />
+                </svg>
+            </button>            
             <div class="messageBox-body">
-                <div class="messageBox-scrollcontainer" id="messageBox-scrollcontainer">
-                </div>                
-            <button id="messageBoxClose-button" type="button" class="btn-close flex-shrink-0" aria-label="Close"></button>
+                <div class="messageBox-scrollcontainer" id="messageBox-scrollcontainer"></div>                
+                <button id="messageBoxClose-button" type="button" class="btn-close flex-shrink-0" aria-label="Close"></button>
             </div>
+            <button type="button" class="messageBox-button" id="messageBoxDown-button">
+                <svg xmlns="http://www.w3.org/2000/svg" class="messageBox-caret" width="30" height="16" fill="currentColor" viewBox="0 0 16 16" preserveAspectRatio="none">
+                    <path d="M2 5h12L8 11z"/>
+                </svg>
+            </button>
         </div>
     </div>
 
