--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Category.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Category.cshtml
@@ -108,7 +108,7 @@
                             </div>
                         </div>
 
-                        <div class="accordion my-2" id="transactions">
+                        <div class="accordion my-2" id="table-container" style="display: none">
                             <div class="accordion-item">
                                 <div id="accordion-head-transaction" class="accordion-head d-flex">
                                     <h5 class="accordion-header me-auto" id="accordionTransactionHeader">
@@ -121,7 +121,7 @@
                                 </div>
                                 <div id="collapseTransaction" class="accordion-collapse collapse show" aria-labelledby="accordionTransactionHeader">
                                     <div class="accordion-body pt-0">
-                                        <div id="table-container" style="display: none">
+                                        <div>
                                             <table class="table table-hover table-borderless w-100 px-2" id="transactions-table">
                                                 <thead>
                                                     <tr>
