--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
@@ -27,12 +27,18 @@
         <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z" />
         <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z" />
     </symbol>
+    <symbol xmlns="http://www.w3.org/2000/svg" id="check-icon" viewBox="0 0 1024 1024">
+        <path d="M866.133333 258.133333L362.666667 761.6l-204.8-204.8L98.133333 618.666667 362.666667 881.066667l563.2-563.2z" fill="#3cb44b" stroke-width="60" stroke="#3cb44b" stroke-linecap="round" stroke-linejoin="round" />
+    </symbol>
+    <symbol xmlns="http://www.w3.org/2000/svg" id="cross-icon" viewBox="0 0 512 512">
+        <path fill="none" stroke="#e6194B" stroke-linecap="round" stroke-linejoin="round" stroke-width="65" d="M368 368L144 144M368 144L144 368" />
+    </symbol>
 </svg>
 
 <div class="content-outer-container" id="fiscalPlans-container">
     <div class="content-scrollcontainer">
         <div class="content-container">
-            <div class="cards-container">                        
+            <div class="cards-container" id="cards-container">                        
                 @foreach(var fiscalPlan in Model.PageModel.FiscalPlans)
                 {                    
                     int progressbarWidthIncome = fiscalPlan.BudgetIncome > 0 ? (int)Math.Min(100, fiscalPlan.TotalIncome / fiscalPlan.BudgetIncome * 100) : 100;
@@ -53,28 +59,28 @@
                             <div>
                                 <div class="d-flex justify-content-between">
                                     <div>Income</div>
-                                    <div id="fiscalPlan_@(fiscalPlan.Id)_income" data-total="@fiscalPlan.TotalIncome" data-budget="@fiscalPlan.BudgetIncome">
+                                    <div id="fiscalPlan_income_@(fiscalPlan.Id)" data-total="@fiscalPlan.TotalIncome" data-budget="@fiscalPlan.BudgetIncome">
                                         @fiscalPlan.TotalIncome.ToString("C2", Model.Culture) / @fiscalPlan.BudgetIncome.ToString("C2", Model.Culture)
                                     </div>
                                 </div>
                                 <div class="progress">
-                                    <div id="fiscalPlan_@(fiscalPlan.Id)_progressbar" class="progress-bar bg-success"
+                                    <div class="progress-bar bg-success"
                                          role="progressbar" style="width: @(progressbarWidthIncome)%"
-                                         aria-valuenow="@(progressbarWidthIncome)" aria-valuemin="0" aria-valuemax="100" aria-labelledby="fiscalPlan_@(fiscalPlan.Id)_balance">
+                                         aria-valuenow="@(progressbarWidthIncome)" aria-valuemin="0" aria-valuemax="100" aria-labelledby="fiscalPlan_balance_@(fiscalPlan.Id)">
                                     </div>
                                 </div>
                             </div>
                             <div>
                                 <div class="d-flex justify-content-between">
                                     <div>Expenses</div>
-                                    <div id="fiscalPlan_@(fiscalPlan.Id)_expenses" data-total="@fiscalPlan.TotalExpenses" data-budget="@fiscalPlan.BudgetExpenses">
+                                    <div id="fiscalPlan_expenses_@(fiscalPlan.Id)" data-total="@fiscalPlan.TotalExpenses" data-budget="@fiscalPlan.BudgetExpenses">
                                         @fiscalPlan.TotalExpenses.ToString("C2", Model.Culture) / @fiscalPlan.BudgetExpenses.ToString("C2", Model.Culture)
                                     </div>
                                 </div>
                                 <div class="progress">
-                                    <div id="fiscalPlan_@(fiscalPlan.Id)_progressbar" class="progress-bar @(color)"
+                                    <div class="progress-bar @(color)"
                                          role="progressbar" style="width: @(progressbarWidthExpenses)%"
-                                         aria-valuenow="@(progressbarWidthExpenses)" aria-valuemin="0" aria-valuemax="100" aria-labelledby="fiscalPlan_@(fiscalPlan.Id)_balance">
+                                         aria-valuenow="@(progressbarWidthExpenses)" aria-valuemin="0" aria-valuemax="100" aria-labelledby="fiscalPlan_balance_@(fiscalPlan.Id)">
                                     </div>
                                 </div>
                             </div>
