--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/src/scss/_variables.scss
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/src/scss/_variables.scss
@@ -36,3 +36,7 @@ $spinner-width: calc(15px + var(--i) * 5px);
 $spinner-height: $spinner-width;
 $spinner-vertical-align: -.125em;
 $spinner-animation-speed: 1.25s;
+
+$tooltip-bg: $body-bg;
+$tooltip-color: $secondary;
+$tooltip-opacity: .95;
