--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_TransactionSearchForm.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_TransactionSearchForm.cshtml
@@ -55,7 +55,7 @@
                         </div>
                     </div>                    
                 </div>
-                <div class="text-center mt-3">
+                <div class="text-center mt-3 mb-1">
                     <input class="submit-btn" type="submit" value="Filter" />
                 </div>
             </div>
