--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Category.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Category.cshtml
@@ -114,10 +114,10 @@
                                     <h5 class="accordion-header me-auto" id="accordionTransactionHeader">
                                         Transactions
                                     </h5>
-                                    <svg xmlns="http://www.w3.org/2000/svg" id="addTransaction-button" height="23" width="23">
+                                    <svg xmlns="http://www.w3.org/2000/svg" tabindex="0" class="no-focus tooltipped" title="Add Transaction" id="addTransaction-button" height="23" width="23" class="no-focus">
                                         <use href="#addTransaction-icon" />
                                     </svg>
-                                    <div class="accordion-caret rotate"></div>
+                                    <div class="accordion-caret rotate" tabindex="0"></div>
                                 </div>
                                 <div id="collapseTransaction" class="accordion-collapse collapse show" aria-labelledby="accordionTransactionHeader">
                                     <div class="accordion-body pt-0">
