--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/FiscalPlan.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/FiscalPlan.cshtml
@@ -175,8 +175,8 @@
                                     </h5>
                                     <h5 id="incomeBalanceHeader" class="accordion-header">
                                         @fiscalPlanDTO.IncomeTotal.ToString("C2", Model.Culture) / @fiscalPlanDTO.IncomeBudget.ToString("C2", Model.Culture)
-                                    </h5>                                    
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="addCategory-icon" viewBox="0 0 14 14" height="23" width="23" tabindex="0">
+                                    </h5>
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="addCategory-icon no-focus tooltipped" title="Add Income Category" viewBox="0 0 14 14" height="23" width="23" tabindex="0">
                                         <use href="#addCategory-icon" />
                                     </svg>
                                     <div class="accordion-caret rotate" tabindex="0"></div>
@@ -229,7 +229,7 @@
                                     <h5 id="expensesBalanceHeader" class="accordion-header">
                                         @fiscalPlanDTO.ExpensesTotal.ToString("C2", Model.Culture) / @fiscalPlanDTO.ExpensesBudget.ToString("C2", Model.Culture)
                                     </h5>
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="addCategory-icon" viewBox="0 0 14 14" height="23" width="23" tabindex="0">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="addCategory-icon  no-focus tooltipped" title="Add Expense Category" viewBox="0 0 14 14" height="23" width="23" tabindex="0">
                                         <use href="#addCategory-icon" />
                                     </svg>
                                     <div class="accordion-caret rotate" tabindex="0"></div>
