--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
@@ -47,11 +47,11 @@
 
                     <div class="fiscalPlan-card" id="fiscalPlan-card_@fiscalPlan.Id" data-id="@fiscalPlan.Id" data-name="@fiscalPlan.Name" tabindex="0">
                         <div class="d-flex justify-content-between gap-1">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14" height="30" width="30" class="fiscalPlan-icon" fill="#ffffff" data-action="edit" tabindex="0">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="fiscalPlan-icon no-focus tooltipped" title="Edit Fiscal Plan" viewBox="0 0 14 14" height="30" width="30" fill="#ffffff" data-action="edit" tabindex="0">
                                 <use href="#edit-icon"/>
                             </svg>
                             <h1 id="fiscalPlan-header_@fiscalPlan.Id" class="fiscalPlan-heading">@fiscalPlan.Name</h1>
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14" height="30" width="30" class="fiscalPlan-icon" fill="#ffffff" data-action="delete" tabindex="0">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14" height="30" width="30" class="fiscalPlan-icon no-focus tooltipped" title="Delete Fiscal Plan" fill="#ffffff" data-action="delete" tabindex="0">
                                 <use href="#trash-icon" />
                             </svg>
                         </div>
