--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_TransactionSearchForm.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_TransactionSearchForm.cshtml
@@ -13,7 +13,7 @@
         <div class="accordion-item">
             <div class="accordion-head">
                 <h2 class="accordion-header me-auto">Filters</h2>
-                <div class="accordion-caret rotate"></div>
+                <div class="accordion-caret rotate" tabindex="0"></div>
             </div>
             <div id="collapseFilters" class="accordion-collapse collapse show" aria-labelledby="filterHeader">
                 <div class="accordion-body">
