--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
@@ -59,7 +59,7 @@
                             <div>
                                 <div class="d-flex justify-content-between">
                                     <div>Income</div>
-                                    <div id="fiscalPlan_income_@(fiscalPlan.Id)" data-total="@fiscalPlan.TotalIncome" data-budget="@fiscalPlan.BudgetIncome">
+                                    <div class="text-end" id="fiscalPlan_income_@(fiscalPlan.Id)" data-total="@fiscalPlan.TotalIncome" data-budget="@fiscalPlan.BudgetIncome">
                                         @fiscalPlan.TotalIncome.ToString("C2", Model.Culture) / @fiscalPlan.BudgetIncome.ToString("C2", Model.Culture)
                                     </div>
                                 </div>
@@ -73,7 +73,7 @@
                             <div>
                                 <div class="d-flex justify-content-between">
                                     <div>Expenses</div>
-                                    <div id="fiscalPlan_expenses_@(fiscalPlan.Id)" data-total="@fiscalPlan.TotalExpenses" data-budget="@fiscalPlan.BudgetExpenses">
+                                    <div class="text-end" id="fiscalPlan_expenses_@(fiscalPlan.Id)" data-total="@fiscalPlan.TotalExpenses" data-budget="@fiscalPlan.BudgetExpenses">
                                         @fiscalPlan.TotalExpenses.ToString("C2", Model.Culture) / @fiscalPlan.BudgetExpenses.ToString("C2", Model.Culture)
                                     </div>
                                 </div>
