--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_Layout.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - MVC.Budget.K_MYR</title>
+    <link rel="icon" href="@Url.Content("~/dist/img/treasure-chest.png")" />
     <script>
         window.userLocale = new Intl.Locale('@Model.Culture.Name');
         window.userNumberFormat = new Intl.NumberFormat('@Model.Culture.Name', { style: 'currency', currency: '@Model.CurrencyCode' });
