--- a/Budget.Furiax/Budget/Views/Home/Index.cshtml
+++ b/Budget.Furiax/Budget/Views/Home/Index.cshtml
@@ -1,9 +1,11 @@
-﻿<!DOCTYPE html>
-<html>
+﻿﻿
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Budget App</title>
     <link rel="stylesheet" href="css/site.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <div class="container">
@@ -17,23 +19,26 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-4 p-2 d-flex justify-content-center">
-                <div class="row ">
+            <div class="col-3 p-2 d-flex justify-content-center">
+                <div class="row">
                     <input type="text" class="col-9" id="searchTransactionName" placeholder="Search name" />
-                <button class="btn btn-success btn-sm col-3" onclick="searchOnTransactionName()">Search</button>
+                    <button class="btn btn-success btn-sm col-3" onclick="searchOnTransactionName()">Search</button>
                 </div>
             </div>
-            <div class="col-4 p-2 d-flex justify-content-center">
+            <div class="col-3 p-2 d-flex justify-content-center">
                 <button class="btn btn-success btn-sm" onclick="sortOnCategory()">Sort on Category</button>
             </div>
-            <div class="col-4 p-2 d-flex justify-content-center">
-                <button class="btn btn-success btn-sm" onclick="sortOnDate()">Sort on Date</button>
+            <div class="col-3 p-2 d-flex justify-content-center">
+                <button class="btn btn-success btn-sm" onclick="sortOnDate()">Sort on Date <i class="bi bi-arrow-down"></i></button>
+            </div>
+            <div class="col-3 p-2 d-flex justify-content-center">
+                <button class="btn btn-success btn-sm" onclick="sortOnDateDesc()">Sort on Date <i class="bi bi-arrow-up"></i></button>
             </div>
         </div>
         <div class="row" id="balance"><div>Account balance: <div id="balanceTotal"></div></div></div>
 
-        <table id="transactionList" class="table table-striped mt-2">
-            <thead class="table table-light" >
+        <table id="transactionList" class="table-striped mt-2 table">
+            <thead class="table-light table">
                 <tr>
                     <th>ID</th>
                     <th>Date</th>
@@ -46,27 +51,27 @@
             </thead>
             <tbody></tbody>
         </table>
-        
+
     </div>
-    
+
 
 
     <div id="transactionModal" class="modal">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-content" id="modalTransaction">
-                    <form action="javascript:void(0);" method="POST" onsubmit="addTransaction()">
-                        Add Transaction:<br>
-                        Date: <input type="date" id="add-date"><br />
-                        Name: <input type="text" id="add-source" placeholder="To/From"><br />
-                        Amount: <input type="text" id="add-amount" placeholder="amount"><br />
-                        Category: <select id="add-selectedcategory" required> </select>
-                        <input type="submit" value="Add">
-                        <div id="error-message" style="color:red; display: none;"></div>
-                    </form>
-                </div>
-            </div>    
-        </div>
+            <div class="modal-content" id="modalTransaction">
+                <form action="javascript:void(0);" method="POST" onsubmit="addTransaction()">
+                <h4>Add Transaction: <span><button id="closeModalTransaction">X</button></span></h4>
+                    <label for="add-date">Date:</label>
+                    <input type="date" id="add-date"><br />
+                    <label for="add-source">Name:</label>
+                    <input type="text" id="add-source" placeholder="To/From"><br />
+                    <label for="add-amount">Amount:</label>
+                    <input type="text" id="add-amount" placeholder="amount"><br />
+                    <label for="add-selectedcategory">Category:</label>
+                    <select id="add-selectedcategory" required> </select>
+                    <input type="submit" value="Add">
+                    <div id="error-message" style="color:red; display: none;"></div>
+                </form>
+            </div>
     </div>
 
     <div id="editTransactionModal" class="modal">
@@ -75,7 +80,7 @@
                 Edit Transaction:<br>
                 Date: <input type="date" id="edit-date"><br />
                 Name: <input type="text" id="edit-source"><br />
-                Amount: <input type="text" id="edit-amount" ><br />
+                Amount: <input type="text" id="edit-amount"><br />
                 Category: <select id="edit-selectedcategory" required> </select>
                 <input type="submit" value="Save Changes">
                 <div id="error-message-edit" style="color:red; display: none;"></div>
@@ -93,7 +98,7 @@
                 </select>
                 <hr>
             </div>
-    
+
             <div id="categoryModal-display">
                 <form action="javascript:void(0);" method="POST" onsubmit="addCategory()">
                     Add Category: <br>
@@ -112,4 +117,3 @@
     </script>
 </body>
 </html>
-
