--- a/Budget.Furiax/Budget/wwwroot/css/site.css
+++ b/Budget.Furiax/Budget/wwwroot/css/site.css
@@ -1,12 +1,12 @@
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 html {
@@ -17,7 +17,7 @@ html {
 
 body {
     background-color: rgb(175,225,175,0.4);
-    }
+}
 
 /* The Category Modal (background) */
 #categoryModal {
@@ -62,19 +62,20 @@ body {
 #transactionModal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 100;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.4);
+    padding: 20px;
 }
 
     /* Transaction Modal Content/Box */
     #transactionModal .modal-content {
         background-color: #fefefe;
-        position: absolute;
+        position: relative;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
@@ -86,9 +87,10 @@ body {
 
 /* Close Button */
 #closeModalTransaction {
-    color: #aaa;
+    color: black;
+    background-color: white;
     float: right;
-    font-size: 28px;
+    font-size: 15px;
     font-weight: bold;
     cursor: pointer;
 }
@@ -121,6 +123,7 @@ body {
         width: 80%;
         max-width: 400px; /* Adjust as needed */
     }
+
 #balance {
     border: 2px solid black;
     font-weight: bold;
