--- a/Budget.Furiax/Budget/Views/Home/Index.cshtml
+++ b/Budget.Furiax/Budget/Views/Home/Index.cshtml
@@ -105,7 +105,7 @@
 
             <div id="categoryModal-display">
                 <form action="javascript:void(0);" method="POST" onsubmit="addCategory()">
-                    Add Category: <br>
+                    <label for="add-categoryname">Add Category:</label><br>
                     <input type="text" id="add-categoryname" placeholder="Name"><span class="btn-close" id="closeModalCategory"></span>
                     <input type="submit" value="Add Category">
                 </form>
